--- a/css/style.css
+++ b/css/style.css
@@ -467,3 +467,11 @@
     }
 }
 /*LOADING END*/
+.custom-fieldset{
+    border: 3px solid black;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+.custom-legend{
+    width: auto;
+}
