--- a/css/style.css
+++ b/css/style.css
@@ -481,3 +481,12 @@
 .bootstrap-datetimepicker-widget{
     z-index: 12000!important;
 }
+.overflow-auto{
+    overflow: auto!important;
+}
+.overflow-scroll{
+    overflow: scroll!important;
+}
+.overflow-hidden{
+    overflow: hidden!important;
+}
