--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+/*html {*/
+/*    overflow: scroll;*/
+/*    overflow-x: hidden;*/
+/*}*/
+/*::-webkit-scrollbar {*/
+/*    width: 0;  !* Remove scrollbar space *!*/
+/*    background: transparent;  !* Optional: just make scrollbar invisible *!*/
+/*}*/
+/*!* Optional: show position indicator in red *!*/
+/*::-webkit-scrollbar-thumb {*/
+/*    background: #FF0000;*/
+/*}*/
 .p-100{
     padding: 100px!important;
 }
@@ -370,6 +382,9 @@
 .p-20-px{
     padding: 20px;
 }
+.button-group{
+    display: flex;
+}
 .button-group-item{
     margin-left: 10px;
 }
@@ -489,4 +504,11 @@
 }
 .overflow-hidden{
     overflow: hidden!important;
+}
+table.dataTable thead th, table.dataTable thead td,
+table.dataTable tfoot th, table.dataTable tfoot td{
+    border: none!important;
+}
+table.dataTable tfoot th, table.dataTable tfoot td{
+    padding: 10px 6px 6px 0px!important;
 }
